# gtnh-2-packwiz

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  DEPENDANCIES.md  README.md  TODO.md  flake.nix  metadata.toml
.github/actions/install-boost/: action.yml
.github/actions/install-program/: action.yml
.github/workflows/: build.yml  release.yml  test.yml  valgrind.yml
cmake/: fetchToml.cmake
gtnh-2-packwiz/: defaultConfigs.toml
gtnh-2-packwiz/include/: config.hpp.in  loggerMacro.hpp  percentage.hpp  progress.hpp  semver.hpp
gtnh-2-packwiz/include/gtnh2Packwiz/: configFile.hpp  extras.hpp  filecache.hpp  init.hpp  loggerLayout.hpp  pack.hpp  poolManager.hpp
gtnh-2-packwiz/src/: main.cpp
gtnh-2-packwiz/src/configFile/: configFile.cpp  getConfig.cpp  getUnsupConfig.cpp
gtnh-2-packwiz/src/extras/: callSignify.cpp  convertSidedness.cpp  downloadFile.cpp  extractZip.cpp  generatePWHash.cpp  getModVersion.cpp  githubSafeDlFile.cpp  humanReadableBytes.cpp
gtnh-2-packwiz/src/filecache/: downloadFile.cpp  filecache.cpp  get.cpp  getFile.cpp  getFuture.cpp  getMeta.cpp
gtnh-2-packwiz/src/init/: argProcesser.cpp  ftxui.cpp  getPriority.cpp  logger.cpp
gtnh-2-packwiz/src/loggerLayout/: format.cpp
gtnh-2-packwiz/src/pack/: build.cpp  deleteFile.cpp  extractZip.cpp  getFile.cpp  pack.cpp  writeToOut.cpp
gtnh-2-packwiz/src/percentage/: addValue.cpp  applyTo.cpp  asDecimal.cpp  asPercent.cpp  fromPercent.cpp  get.cpp  getCapacity.cpp  getWhole.cpp  operator.minus.cpp  operator.plus.cpp  percentage.cpp  roundToPrecision.cpp  setPercent.cpp  setProgress.cpp  tick.1.cpp  tick.2.cpp  tick.cpp  worthPrinting.cpp
gtnh-2-packwiz/src/percentage/operators/: assignment.1.cpp  assignment.2.cpp  assignment.3.cpp  double.cpp  insertStream.cpp  plusEquals.cpp  times.cpp
gtnh-2-packwiz/src/percentage/operators/compare/: eq.cpp  gt.cpp  lt.cpp
gtnh-2-packwiz/src/percentage/operators/compare/derived/: gte.cpp  lte.cpp  ne.cpp
gtnh-2-packwiz/src/poolManager/: getPool.cpp  getThreadCount.cpp  poolManager.cpp  poolManager.destructor.cpp  reset.cpp  setNewThreadCount.cpp
gtnh-2-packwiz/src/progress/: addValue.cpp  get.cpp  getCapacity.cpp  getPercent.cpp  getWhole.cpp  operator.insertStream.cpp  operator.postfixIncriment.cpp  operator.prefixIncriment.cpp  percentage.cpp  progress.cpp  roundToPrecision.cpp  setPercent.cpp  setProgress.cpp  tick.cpp  worthPrinting.cpp
gtnh-2-packwiz/src/semVer/: raw.cpp  sameMaj.cpp  sameMin.cpp  samePat.cpp  samePre.cpp  semVer.1.cpp  semVer.2.cpp  semVer.3.cpp  semVer.4.cpp  string.cpp
nix/: outputs.nix
